# DTMinimisation

./: LICENSE  README.md  build.py  calculate.sh  calculatefc.py  diffScript.sh  main.py  minterms.py  optimizedQuineMcCluskey.py  optimizedmain.py  prologOutput.sh  prologTest.sh  pyproject.toml  pythonTest.sh  quineMcCluskey.py  test.py
Examples/: booleanExample1.txt  input.txt  input3.txt
GeneratedExamples/: ex.5_3_10  ex.5_5_10  ex.7_4_15  ex.9_4_10  ex.9_4_15
Implicant/: booleanImplicant.py  intervalmplicant.py  optimizedintervalImplicant.py
PyOutput/: ex.3_2_10  ex.3_2_15  ex.3_2_5  ex.3_3_10  ex.3_3_15  ex.3_3_5  ex.3_4_10  ex.3_4_15  ex.3_4_5  ex.5_2_10  ex.5_2_15  ex.5_2_5  ex.5_3_10  ex.5_3_15  ex.5_3_5  ex.5_4_10  ex.5_4_15  ex.5_4_5  ex.7_2_10  ex.7_2_15  ex.7_2_5  ex.7_3_10  ex.7_3_15  ex.7_3_5  ex.7_4_10  ex.7_4_15  ex.7_4_5  ex.9_5_15
Resources/: intervalsGenerator.py  readInput.py  resources.py
ejemplofuncional/GeneratedExamples/: ex.5_3_15  ex.5_4_10  ex.5_4_15  ex.5_4_20  ex.5_5_15  ex.7_3_10  ex.7_4_10  ex.7_5_15  ex.7_5_20  ex.9_3_10  ex.9_3_15  ex.9_4_20  ex.9_5_10  ex.9_5_15
ejemplofuncional/PyOutput/: ex.5_3_10  ex.5_3_15  (+17 more)
prolog/: Makefile  kk  mindt  mindt.pl  prologTest.sh  sol1.txt
prologOutput/: ex.3_4_15  ex.5_3_10  ex.5_4_10  ex.5_4_20  ex.7_3_10  ex.7_4_15
tests/: diffScript copy.sh  main.py  minimizeFile.py  minimizeFileOptimized.py  optimizationTest.sh  output.txt  prologOutput.sh  prologTest.sh  pythonTest.sh  testMinimization.py  testOptimized.py  testThings.py
times/: build.py  prologTimes.txt  pythonTimes.txt
(+260 files in other folders)
